# ORG

./: .gitignore  Cargo.toml  Dioxus.toml  dev.sh  readme.md
assets/: main.css  tailwind.css
src/: main.rs
src/org/: heading.rs  mod.rs  nav.rs  state.rs
src/org/pages/: calendar.rs  goals.rs  mod.rs  timeline.rs  todo.rs
src/org/views/: goal_create_form.rs  mod.rs
