[package]
name = "org"
version = "0.1.0"
authors = ["Eric Xiao <73317463+NycRat@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.2", features = ["web", "desktop", "router"], git = "https://github.com/DioxusLabs/dioxus.git" }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
cuid2 = "0.1.2"

[features]

desktop = []
web = []
